--- a/munia_io/home/templates/home/faq.html
+++ b/munia_io/home/templates/home/faq.html
@@ -10,6 +10,10 @@
 		<section class="bg-image-hero center-tablet dark overlay-shape-03 full-screen">
 			<div class="-margin-bottom padding padding-top-tablet">
 
+				<div class="center max-width-l">
+					<h1 class="hero">FAQ</h1>
+				</div>
+
 				<section class="cd-faq">
 
 					<ul class="cd-faq-categories blank">
