--- a/munia_io/home/templates/home/software.html
+++ b/munia_io/home/templates/home/software.html
@@ -41,7 +41,15 @@
 			<div class="-margin-bottom padding padding-top-tablet">
 
 				<div class="center max-width-l">
-					<h1 class="hero">Software features</h1>
+					<h1 class="hero">Software overview</h1>
+				</div>
+
+				<div class="margin-top padding-opt dark max-width-l bg-gradient-orange">
+					<h2>Download</h2>
+					<p class="space-left">
+					The latest software can be downloaded here.
+					</p>
+					<a href="https://munia.io/tool/get_latest" class="button button-primary space-top" role="button">Download</a>
 				</div>
 
 				<div class="margin-top padding-opt dark max-width-l bg-gradient-blue">
