make compatible with latest django

--- a/munia_io/home/templates/home/devices.html
+++ b/munia_io/home/templates/home/devices.html
@@ -27,15 +27,15 @@
 							<li>Built-in LCD for configuration</li>
 						</ul>
 
-						<img src="{% static "img/content/munia_device.png" %}"/>
+						<img src="{% static "img/content/munia_device_soldout.png" %}"/>
 
 						<div style="flex-grow: 1;"></div>
 
 						<form class="button button-secondary full-width space-top" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-							<input type="hidden" name="cmd" value="_s-xclick">
-							<input type="hidden" name="hosted_button_id" value="JG5E3SB5LDSUE">
+							<!-- <input type="hidden" name="cmd" value="_s-xclick">
+							<input type="hidden" name="hosted_button_id" value="JG5E3SB5LDSUE"> -->
 							<input type="image" src="https://munia.io/static/img/content/buynow.png" name="submit" alt="PayPal - The safer, easier way to pay online!"
-							       style="border: 0px; height: 39px; vertical-align: middle;">
+							       style="border: 0px; height: 39px; vertical-align: middle;" disabled>
 						</form>
 
 					</div>
@@ -43,7 +43,7 @@
 					<div class="col-one-third card card-content dark flex-column">
 						<h2>MUSIA</h2>
 						<p>World's first PS2 input display</p>
-						<h3 class="pricing-price">€55 <span class="xsmall">excl. shipping</span></h3>
+						<h3 class="pricing-price">€60<span class="xsmall">excl. shipping (only 1 remaining!)</span></h3>
 
 
 						<p class="paragraph">The first and only device capable of showing PS2 inputs on stream</p>
@@ -59,10 +59,10 @@
 						<div style="flex-grow: 1;"></div>
 
 						<form class="button button-secondary full-width space-top" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-							<input type="hidden" name="cmd" value="_s-xclick">
+						  <input type="hidden" name="cmd" value="_s-xclick">
 							<input type="hidden" name="hosted_button_id" value="FWUCLPCNBYUGE">
 							<input type="image" src="https://munia.io/static/img/content/buynow.png" name="submit" alt="PayPal - The safer, easier way to pay online!"
-							       style="border: 0px; height: 39px; vertical-align: middle;">
+							       style="border: 0px; height: 39px; vertical-align: middle;" >
 						</form>
 					</div>
 
