--- a/munia_io/home/templates/home/faq.html
+++ b/munia_io/home/templates/home/faq.html
@@ -103,7 +103,7 @@
 							<li>
 								<a class="cd-faq-trigger" href="#0">How do I show my inputs with OBS?</a>
 								<div class="cd-faq-content">The preferred way is to use a <em>Game Capture</em> source in
-									OBS. This allows you to use proper transparency without setting a colorkey, and its
+									OBS. This allows you to use proper transparency without setting a colorkey, and it's
 									the most efficient method of capturing since MUNIA is rendered using OpenGL.
 									Unfortunately there are reports of Game Capture mode not working in OBS in which
 									case resorting to Window Capture is a workable solution, but you should first
