--- a/munia_io/home/templates/home/software.html
+++ b/munia_io/home/templates/home/software.html
@@ -119,7 +119,7 @@
 				<div class="margin-top padding-opt margin-bottom dark max-width-l bg-gradient-cyan">
 					<h2>NintendoSpy compatibility</h2>
 					<p class="paragraph">Although fundamentally different, the MUNIA software can be configured to process
-						data form NintendoSpy input displays as well. These devices are arduino-based and show up on your system
+						data from NintendoSpy input displays as well. These devices are arduino-based and show up on your system
 						as a Serial COM port. The MUNIA software allows these to be mapped onto Gamecube, N64 or SNES controllers.
 						All you need to do is specify the correct mapping in the <em>Arduino mappings</em> menu.</p>
 					<img src="{% static "img/content/arduino_mapper.png" %}" alt="Arduino mapper window">
