--- a/munia_io/templates/footer.html
+++ b/munia_io/templates/footer.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <footer class="footer-main bg-image-hero dark overlay-shape-04">
     <div class="margin-top center max-width-m">
         <h3>MUNIA - High quality gamepad input adapters</h3>
