--- a/munia_io/home/templates/home/index.html
+++ b/munia_io/home/templates/home/index.html
@@ -14,6 +14,7 @@
 							<p>All designs, firmware and software are open source.</p>
 							<a href="http://github.com/zzattack/munia" class="button button-primary space-top" role="button">Github project</a>
 							<a href="devices.html" class="button button-primary space" role="button">Buy a device</a>
+							<a href="/download" class="button button-primary space" role="button">Download</a>
 						</div>
 					</div>
 					<div class="col-one-half middle">
